<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.garganttua</groupId>
	<artifactId>garganttua-api</artifactId>
	<packaging>pom</packaging>
	<version>2.0.0-SNAPSHOT</version>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Jérémy Colombet</name>
			<email>jeremy.colombet@garganttua.com</email>
		</developer>
	</developers>

	<repositories>
		<repository>
			<id>github garganttua tooling</id>
			<name>github garganttua tooling</name>
			<url>https://maven.pkg.github.com/garganttua/garganttua-tooling</url>
		</repository>
	</repositories>

	<distributionManagement>
		<snapshotRepository>
			<id>github garganttua api</id>
			<name>github garganttua api</name>
			<url>https://maven.pkg.github.com/garganttua/garganttua-api</url>
		</snapshotRepository>
		<repository>
			<id>github garganttua api</id>
			<name>github garganttua api</name>
			<url>https://maven.pkg.github.com/garganttua/garganttua-api</url>
		</repository>
	</distributionManagement>

	<properties>
		<com.garganttua.tooling.version>1.0.11</com.garganttua.tooling.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.garganttua</groupId>
				<artifactId>garganttua-api-spec</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.garganttua</groupId>
				<artifactId>garganttua-api-core</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.garganttua</groupId>
				<artifactId>garganttua-api-spring-security-core</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.garganttua</groupId>
				<artifactId>garganttua-objects-mapper</artifactId>
				<version>${com.garganttua.tooling.version}</version>
			</dependency>

			<dependency>
				<groupId>com.garganttua</groupId>
				<artifactId>garganttua-reflection</artifactId>
				<version>${com.garganttua.tooling.version}</version>
			</dependency>

			<dependency>
				<groupId>com.garganttua</groupId>
				<artifactId>garganttua-executor-chain</artifactId>
				<version>${com.garganttua.tooling.version}</version>
			</dependency>

			<dependency>
				<groupId>com.garganttua</groupId>
				<artifactId>garganttua-api-interface-spring-rest</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.garganttua</groupId>
				<artifactId>garganttua-api-spring-core</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.garganttua</groupId>
				<artifactId>garganttua-api-spring-interface-rest</artifactId>
				<version>${project.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.30</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<scope>provided</scope>
			<version>2.0.13</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>2.0.13</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>18</source>
					<target>18</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>garganttua-api-spec</module>
		<module>garganttua-api-core</module>
		<module>garganttua-api-spring</module>
		<module>garganttua-api-security</module>
	</modules>
</project>
